# stream-chat

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  result.json
.streamlit/: secrets.toml.example
src/: chat_client.py  main.py  pdf_parser_v2.py
