[project]
name = "stream-chat"
version = "0.1.0"
description = "A Streamlit chatbot with PDF knowledge base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "dashscope>=1.14.0",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.0",
    "openai>=1.3.5",
    "pymupdf>=1.26.6",
    "fitz>=0.0.1.dev2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
stream-chat = "stream_chat.main:main"

[project.optional-dependencies]
debug = [
    "streamlit>=1.28.0",
]
